# Chinese-nonwords-generator

./: Generator.ipynb  Phonological Neighbourhood Density.ipynb  Preparation-Copy1.ipynb  README.md
Data/: words17k_CVVX_T.csv
Stimuli/: Generator_ver0.ipynb  Generator_ver3.ipynb  Generator_ver4.ipynb  Generator_ver5.ipynb  Generator_word.ipynb  Preparation.ipynb  notebook.tex
Stimuli/.ipynb_checkpoints/: Phonological Neighbourhood Density-checkpoint.ipynb
Stimuli/Data/: df1_ver_3.csv  df1_ver_5.csv  df2_ver_0.csv  df2_ver_1.csv  df3.csv
archive-2018/: Generator_character.ipynb  Generator_ver1.ipynb  Generator_word.ipynb  Phonological Neighbourhood Density.ipynb  stimuli_ver1.csv
archive-2018/.ipynb_checkpoints/: Generator_character-checkpoint.ipynb  Generator_ver0-checkpoint.ipynb  Generator_ver2-checkpoint.ipynb  Generator_word-checkpoint.ipynb
archive-2018/Data/: CLP.csv  SUBTLEX_CH_shortened.csv  df1_ver_0.csv  df1_ver_1.csv  df1_ver_2.csv  df1_ver_4.csv  df1_ver_6.csv  df2_ver_2.csv
chinese-nonwords/: README.md  pyproject.toml  requirements.txt
chinese-nonwords/src/chinese_nonwords/: __init__.py  example.py
chinese-nonwords/src/chinese_nonwords/data/: subset.csv  word.csv
chinese-nonwords/tests/: README.md
twochar/: functions.py  setup.py  test.py
twochar/data/: word.csv
