[project]
name = "chinese-nonwords"
version = "0.0.10"
authors = [{ name = "Mingyu", email = "author@example.com" }]
description = " package for generating Chinese disyllabic nonwords"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pypinyin>=0.50.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "numpy>=1.26.4",
]

[project.urls]
Homepage = "https://github.com/zimine/Chinese_pseudoword_generator"
Issues = "https://github.com/zimine/Chinese_pseudoword_generator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.metadata]
# package_data={'my_pkg' :['src/data*.csv']}

# Specify the relative path to your package data
[tool.hatch.build.targets.wheel]
packages = ["src/chinese_nonwords"]
package-data = { "chinese_nonwords" = ["src/data/*.csv"] }
